# NLP-Assistant

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
data/audio/: heizungAuf20Grad.m4a  schalteDasLichtAn.m4a  wievielGradImBadezimmer.m4a
nlp_assistant/data/models/: intent_model.joblib
src/nlp_assistant/: backend.py  main.py
src/nlp_assistant/backend/: backendController.py
src/nlp_assistant/backend/audio/: SpeechPreProcessing.py  TextToSpeech.py
src/nlp_assistant/backend/connection/: HomeAssistantController.py  HomeAssistantRestManager.py
src/nlp_assistant/backend/core/: IntentRecognizer.py  deviceMatcher.py
src/nlp_assistant/data/: deviceList.json  test.json
src/nlp_assistant/data/models/: intent_model.joblib
src/nlp_assistant/data/trainingData/: test.csv  training_data.csv  trainingsdata.csv
src/nlp_assistant/frontend/: frontend.py
src/nlp_assistant/helper/: HomeAssistantRestManager.py  HomeAssistentRestManager.py  SpeechPreProcessing.py  TextToSpeech.py  __init__.py  frontend.py  tts.py
src/nlp_assistant/pipelineParts/: HomeAssistantController.py  IntentRecognizer.py  TempIntentRecognizer.py  deviceMatcher.py
tests/: Test_IntentRecognizer.py  conftest.py  test_SpeechPreProcessing.py  test_TextToSpeech.py  test_deviceMatcher.py  test_ha_controller.py  test_ha_manager_rest.py  test_intent_recognizer.py
