[project]
name = "nlp-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Jannes Kurzke",email = "janneskurzke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "regex (>=2025.11.3,<2026.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "pytest (>=9.0.1,<10.0.0)",
]

[tool.poetry]
packages = [{include = "nlp_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
