[project]
name = "nlp-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Jannes Kurzke",email = "janneskurzke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "regex (>=2025.11.3,<2026.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "piper-tts (>=1.3.0,<2.0.0)",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "nvidia-cublas-cu12 (>=12.9.1.4,<13.0.0.0)",
    "nvidia-cudnn-cu12 (>=9.17.0.29,<10.0.0.0)",
    "de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
]

[tool.poetry]
packages = [{include = "nlp_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "nlp_assistant.main:main"
trainIntentRecognizerModel = "nlp_assistant.helper.IntentRecognizerController:trainIntentRecognizerModel"